@@ -270,7 +270,57 @@ $lang[4] = array("Область сканирования", // 0
                  "Дополнительные параметры",      // 38
                  "Нет комманды сканирования",     // 39
                  "Формат страницы",      // 40
+				 "Название файла",           // 41
+				 "Исходящий файл",         // 42
 );
 
+////////////////////////////////////////////////////////////////////////
+ 
+// 5 = Українська (Ukrainian)
+
+$lang[5] = array("Область сканування", // 0
+		 "Зліва",                // 1
+		 "З верху",             // 2
+		 "Ширина",               // 3
+		 "Висота",               // 4
+		 "Зверху-зліва",            // 5
+		 "Внизу-зправа",            // 6
+		 "Позиція X",            // 7
+		 "Позиція Y",            // 8
+		 "Параметри сканування",        // 9
+		 "Формат файлу",         // 10
+		 "JPG",                  // 11
+		 "PNM",                  // 12
+		 "TIFF",                 // 13
+		 "Режим",                // 14
+		 "Кольорове 24 біт",       // 15
+		 "Відтінки сірого",       // 16
+		 "Черно-білий",          // 17
+		 "Роздільна здатність, DPI",       // 18
+		 "Колір",                 // 19
+		 "Негатив",              // 20
+		 "Баланс білого",        // 21
+		 "Яскравість",              // 22
+		 "Контраст",             // 23
+		 "Перегляд",             // 24
+		 "Скинути",                // 25
+		 "OCR",                  // 26
+		 "Сканувати",          // 27
+		 "Очистити",             // 28
+		 "Перегляд<br><br>Немає виділення<br>Немає формату файлу<br>Немає роздільної здатності DPI", // 29
+		 "Максимальні значення сканування<br><br>DIN-A4<br>Роздільна здатність DPI = 5 - 600",  // 30
+		 "Пристрій сканування",      // 31
+		 "Помилка",               // 32
+		 "Сканери не знайдені.<br>Перевірте підключення через програму sane-find-scanner (якщо встановлена).<br>Або почитайте додаткові інструкції (README, FAQ, manpages).",      // 33
+		 "Повторити",            // 34
+		 "Правая кнопка - зберегти", // 35
+		 "Закрити",              // 36
+		 "Допомога",               // 37
+		 "Додаткові параметри",      // 38
+		 "Немає комманди сканування",     // 39
+		 "Формат сторінки",      // 40
+		 "Назва файлу",           // 41
+		 "Вихідний файл",         // 42
+);
 
 ?>
