@@ -63,3 +63,5 @@
 	- changed encoding to UTF-8 with a view to creating translations in other languages
 	- added finish translation
 	- added russian translation
+	- added ukrainian translation
+	- fixed typo in lineart (monochrom) scan mode
